dataset1235/2025-2/1379599236/users/2648842661/executions/2277843042_2383239197.log
== RUN (2025-08-25 20:12:33)
-- CODE: 
Import math

a = float(input("Digite a distancia a (observador ate a primeira arvore):"))
b = float(input("Digite a distancia a (observador ate a primeira arvore):"))
gamma_graus= float(input())

grammas_graus = math.radians(grammas_graus)

c= math.sqrt(a**2 + b**2 - 2*a*b*math.cos(gamma_radianos))
print(c)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 1
    Import math
           ^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 1
    Import math
           ^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 1
    Import math
           ^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 1
    Import math
           ^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 1
    Import math
           ^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 1
    Import math
           ^^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 17:11:21)
-- CODE: 
from math import*

a = float(input("Digite a distancia a (observador ate a primeira arvore):"))
b = float(input("Digite a distancia a (observador ate a primeira arvore):"))
gamma_graus= float(input())

gamma_radianos =  radians(gamma_graus)

c= sqrt(a**2 + b**2 - 2*a*b*cos(gamma_radianos))
print(round(c,2))

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
---- user output:
Digite a distancia a (observador ate a primeira arvore):Digite a distancia a (observador ate a primeira arvore):87.54
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
---- user output:
Digite a distancia a (observador ate a primeira arvore):Digite a distancia a (observador ate a primeira arvore):16.42
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
Digite a distancia a (observador ate a primeira arvore):Digite a distancia a (observador ate a primeira arvore):17.14
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
---- user output:
Digite a distancia a (observador ate a primeira arvore):Digite a distancia a (observador ate a primeira arvore):1.88
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
---- user output:
Digite a distancia a (observador ate a primeira arvore):Digite a distancia a (observador ate a primeira arvore):54.43
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
---- user output:
Digite a distancia a (observador ate a primeira arvore):Digite a distancia a (observador ate a primeira arvore):9.17
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 17:12:45)
-- CODE: 
from math import*

a = float(input("Digite a distancia a (observador ate a primeira arvore):"))
b = float(input("Digite a distancia a (observador ate a primeira arvore):"))
gamma_graus= float(input())

gamma_radianos =  radians(gamma_graus)

c= sqrt(a**2 + b**2 - 2*a*b*cos(gamma_radianos))
print(round(c,2))

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
---- user output:
Digite a distancia a (observador ate a primeira arvore):Digite a distancia a (observador ate a primeira arvore):87.54
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
---- user output:
Digite a distancia a (observador ate a primeira arvore):Digite a distancia a (observador ate a primeira arvore):16.42
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
Digite a distancia a (observador ate a primeira arvore):Digite a distancia a (observador ate a primeira arvore):17.14
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
---- user output:
Digite a distancia a (observador ate a primeira arvore):Digite a distancia a (observador ate a primeira arvore):1.88
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
---- user output:
Digite a distancia a (observador ate a primeira arvore):Digite a distancia a (observador ate a primeira arvore):54.43
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
---- user output:
Digite a distancia a (observador ate a primeira arvore):Digite a distancia a (observador ate a primeira arvore):9.17
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 20:14:11)
-- CODE: 
Import math

a = float(input("Digite a distancia a (observador ate a primeira arvore):"))
b = float(input("Digite a distancia a (observador ate a primeira arvore):"))
gamma_graus= float(input())

grammas_graus = math.radians(grammas_graus)

c= math.sqrt(a**2 + b**2 - 2*a*b*math.cos(gamma_radianos))
print(round(c,2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 1
    Import math
           ^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 1
    Import math
           ^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 1
    Import math
           ^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 1
    Import math
           ^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 1
    Import math
           ^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 1
    Import math
           ^^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
